--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-server.port=9001
-
 spring.datasource.url=jdbc:mysql://localhost:3306/fruitdb
-spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.username=fruituser
+spring.datasource.password=fruitpass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+server.port=9001
