--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/fruitdb
+spring.datasource.url=jdbc:mysql://localhost:3306/fruitdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=fruituser
 spring.datasource.password=fruitpass
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-server.port=9001
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
