--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,22 @@ services:
       timeout: 5s
       retries: 5
 
+  spring-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: spring-crud
+    restart: always
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/fruitdb
+      SPRING_DATASOURCE_USERNAME: fruituser
+      SPRING_DATASOURCE_PASSWORD: fruitpass
+      SERVER_PORT: 8080
+    ports:
+      - "8080:8080"
+
 volumes:
   mysql_data:
