--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/fruitdb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=fruituser
-spring.datasource.password=fruitpass
+# =========================
+# Database configuration
+# =========================
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/fruitdb?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:fruituser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:fruitpass}
 
+# =========================
+# JPA configuration
+# =========================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
